v3.9.1:
 Developers:
  - Protocol assign transformation to TS: fix a bug in the assignment of the tilt angle to each new tilt image.
  - Fix TS clone --> now the a literal clone is expected by default instead of ignoring some attributes.
  - TS: improve methods for excluded views management.
v3.9.0:
 Users: 
  - Add a protocol for filtering coordinates based on a mask.
  - TS viewer: Adding angles and the transformation matrix information
  - Update napari to v0.4.19
  - Steps more precise in GPU usage. Improved execution
 Developers:
  - Execution mode at class level
v3.8.0:
 Users:
  - Import tomograms, CTFs and Transformation matrices (IMOD): added import functionality using the pattern {TS} to
    select the substring that will be considered as tsId.
  - Import TS:
    * Fix the heterogeneous set of TS validation using a range of angles.
    * Multiple TS can be imported without the label {TS}.
  - Join heterogeneous sets are possible for tomography objects TS and tomograms.
  - New protocol correct tilt offset: It allows to correct the tilt offset of a tilt series
  - Fix the protocol tomograms to micrographs. Helps enhanced. ImageHandler replaced by mrcfile.
  - Import from Mdoc: more precise error when calculating the dose. GUI log with more information.
  - TS viewer: Deleting excluded views and creating a new TS stack.
  - Fixing an error creating new outputs through the tiltserie viewer and import error in absence of metadataviewer.
  - Fixing an error plotting the defocus values in the ctfEstimation viewer
  - Import TS with mdoc: fix in the assignment of the initial dose.
  - Assign Transformation Matrix: combine alignments removed. Some fixes at metadata level.
Developers:
  - Attribute _acquisition is initialized as None in TSBase, so the coppyAttributes callen in protocol for joining.
    sets work properly. The same whith the attribute _origin.
  - Method hasAcquisition re-defined in TSBase for the same reason exposed in the previous line.