@@ -3,6 +3,7 @@ v3.9.1:
   - Protocol assign transformation to TS: fix a bug in the assignment of the tilt angle to each new tilt image.
   - Fix TS clone --> now the a literal clone is expected by default instead of ignoring some attributes.
   - TS: improve methods for excluded views management.
+  - Protoocol import tomograms: exclusion words fixed when not using a pattern.
 v3.9.0:
  Users: 
   - Add a protocol for filtering coordinates based on a mask.
